debian-installer (20041119) UNRELEASED; urgency=low

  * Joey Hess
    - Add module-init-tools to build deps for ia64 to fix truncated
      modules.dep files and USB keyboard.
    - Add it for sparc too.
    - Add 2.6 netboot image for hppa. Includes a move of the 2.4 netboot
      image into the netboot/ directory for consistency.
  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.

 -- Joey Hess <joeyh@debian.org>  Mon, 22 Nov 2004 16:35:47 -0500

debian-installer (20041118) unstable; urgency=HIGH

  * Joey Hess
    - Add debian-installer/locale=C to s390 parmfile to work around
      bug #281538 in languagechooser.
    - Add module-init-tools to build deps for hppa, to fix FTBFS.

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Nov 2004 14:12:41 -0500

debian-installer (20041115) unstable; urgency=HIGH

  * Bdale Garbee
    - Enable hppa 2.6 cd initrd building now that we have suitable udebs
    - freshen hppa configs, adding modules udebs for hppa 2.6 kernels, etc
    - update hppa kernel versions
    - add discover udebs to hppa 2.6 package list
  * Steve Langasek
    - Extensive alpha-related edits to the install manual; it should now
      exhibit more than a remote correspondence to the installer itself.
  * Stephen R. Marenka
    - Explicitly note in manual that m68k 2.2 kernels should use initrd22
      ramdisks.
    - Fix m68k/bvme6000 links in manual.
    - Add mac53c9x kernel parameter notes to manual.
  * Joey Hess
    - Add network-preseed to s390 initrd.

 -- Joey Hess <joeyh@debian.org>  Mon, 15 Nov 2004 16:00:10 -0500

debian-installer (20041027) unstable; urgency=HIGH

  * Colin Watson
    - Remove asian-root floppy for powerpc, and make the root floppy
      English-only. The 2.6 root floppy now fits. Closes: #276826
  * Joey Hess
    - Remove fdisk-udeb from overfull mips initrds. The priority/dependency