@@ -10,3 +10,6 @@ kbd-chooser
 # FIXME: this was added when hppa used partconf. Not needed for partman,
 # should be removable.
 fdisk-udeb
+
+discover1-udeb
+discover1-data-udeb
