@@ -1,4 +1,2 @@
 nic-modules-${kernel:Version} *
 input-modules-${kernel:Version} 
-discover1-udeb
-discover1-data-udeb
