@@ -17,3 +17,5 @@ netcfg
 # used by netcfg
 libiw27-udeb
 
+discover1-udeb
+discover1-data-udeb
