@@ -6,6 +6,10 @@ debian-installer (20041119) UNRELEASED; urgency=low
     - Add it for sparc too.
     - Add 2.6 netboot image for hppa. Includes a move of the 2.4 netboot
       image into the netboot/ directory for consistency.
+    - Add discover1 to even the 2.4 hppa images. Yes, there are no modules
+      there, but this allows the de4x5 blacklist code in hw-detect to notice
+      that discover1 wants to load de4x5, and blacklist it, avoiding a
+      crash when the installed system boots.
   * Thiemo Seufer
     - Do an e2fsck for the extra floppy images.
     - Handle sparse files in cramfs images more efficiently.
